src/objects/Metric__c.object
<CustomObject>
    <description>This object represents the definition of a metric in the Company Wide Report</description>
    <fields>
        <fullName>Calculate_Delta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Delta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delta_Object_Name__c</fullName>
        <description>The plural name of the object used in the calculations.  Ex: Leads, System Designs</description>
        <inlineHelpText>The plural name of the object used in the calculations.  Ex: Leads, System Designs.  This text will be displayed by the Delta calculation.</inlineHelpText>
        <label>Delta Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Headcount_Profiles_Label__c</fullName>
        <description>This is the label that will appear on the report for the Headcount sections</description>
        <inlineHelpText>This is the label that will appear on the report for the Headcount sections</inlineHelpText>
        <label>Headcount Profiles Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headcount_Profiles__c</fullName>
        <description>A comma separated list of the profile names used to calculate the headcount for the metric.</description>
        <inlineHelpText>A comma separated list of the profile names used to calculate the headcount for the metric.</inlineHelpText>
        <label>Headcount Profiles</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_On_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include On Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Calculated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this checkbox to flag a metric as for inclusion in management only reports</description>
        <inlineHelpText>Use this checkbox to flag a metric as for inclusion in management only reports</inlineHelpText>
        <label>Management Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is an indicator that specifies whether a positive reported value indicates a good (green) or bad (red) result.</description>
        <inlineHelpText>This field is an indicator that specifies whether a positive reported value indicates a good (green) or bad (red) result.</inlineHelpText>
        <label>Positive Numbers Are Green</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Query_Name__c</fullName>
        <description>This picklist defines the query that will be used to populated the reported values in the calculations</description>
        <label>Query Name</label>
        <picklist>
            <picklistValues>
                <fullName>Appointments Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointments Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average System Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity In Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Inspected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Case Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Referrals Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kickoff Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Median Time Project Creation to Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Median Time Sale to Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Median Time to First Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Headcount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Consultant Headcount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Referrals Count</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <label>Reporting Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Order__c</columns>
        <columns>Reporting_Frequency__c</columns>
        <columns>Management_Only__c</columns>
        <columns>Include_On_Report__c</columns>
        <columns>Is_Calculated__c</columns>
        <columns>Query_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>